...
      selectedCheckoutPlan={selectedCheckoutPlan}
      selectedCheckoutPlanPrice={selectedCheckoutPlanPrice}
    />
  );

  return (
    <ZookScreen testID="gym-profile-screen">
      <ScrollView
        ref={scrollRef}
        style={styles.scroller}
        contentInsetAdjustmentBehavior="never"
        showsVerticalScrollIndicator={false}
        contentContainerStyle={styles.content}
...
