appId: com.zook.app
name: complete-language-selection-if-needed
---
- tapOn:
    id: "onboarding-intro-screen"
    optional: true
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    id: "onboarding-language-en"
    optional: true
- tapOn:
    id: "onboarding-language-continue"
    optional: true
- waitForAnimationToEnd:
    timeout: 5000
